<resources>
    <string name="app_c2dm_email">moses.tud@googlemail.com</string>
    <string name="app_name">MoSeS</string>
    <string name="title_activity_main">Control Panel</string>
    <string name="title_activity_questionnaire">Survey</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="connected">Connected</string>
    <string name="login_error">Error while logging in.</string>
    <string name="nonEmptyString">Please enter a non-empty string.</string>
    <string name="retry">Reconnect</string>
    <string name="refresh">Refetch</string>
    <string name="downloadingApp">Downloading the app&#8230;</string>
    <string name="pleaseWait">Please wait.</string>
    <string name="noInternetConnection_title">No connection</string>
    <string name="noInternetConnection_message">There seems to be no open internet connection present for downloading the app.</string>
    <string name="noInternetConnection_userStudy_message">Can\'t show user study details. No internet connection. Try to fix it and try again later.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">error</string>
    <string name="downloadApk_errorMessage">An error occurred while trying to download the app: %1$s.</string>
    <string name="apkInstallManager_errorMessage">Service is not started yet, thus the installation could not be started</string>
    <string name="apkInstallManager_apkInstallFailed">Apk install failed</string>
    <string name="open">Open</string>
    <string name="install">Install</string>
    <string name="q_send">Send to server</string>
    <string name="q_answersSent">Your answers have been sent!</string>
    <string name="q_next">Next</string>
    <string name="surveySendToServerTitle">Sending survey</string>
    <string name="surveySendToServerMessage">Please, confirm sending of survey\'s answers to server.</string>
    <string name="userStudy_loading">Loading&#8230;</string>
    <string name="userStudy_loadingInformation">Loading userstudy information</string>
    <string name="userStudy_errorMessage">An error occurred when retrieving the informations for a user study: %1$s.\nSorry! This was a shock for both of us. Maybe you could try again from the available tab later? Thanks!</string>
    <string name="userStudy_errorMessage2">An error occurred when installing the user study app. Sorry!</string>
    <string name="userStudy_errorMessage_saveDatabase">An error occurred when saving the app database.</string>
    <string name="userStudy_newStudyAvailable">A new user study is available for you!</string>
    <string name="userStudy_userStudyName">Name: %1$s</string>
    <string name="userStudy_userStudyDescription">%1$s</string>
    <string name="userStudy_available">Back to available tab</string>
    <string name="userStudy_running">Back to running tab</string>
    <string name="userStudy_past">Back to history tab</string>
    <string name="loadingName">Loading Name&#8230; (ID: %1$s)</string>
    <string name="loadingDescription">Loading Description&#8230;</string>
    <string name="not_set">not set</string>
    <string name="hwInfo_errorMessage">Error while retrieving Hardware Informations.</string>
    <string name="hwInfo_parametersRetrievedSuccessfully">Parameters retrieved successfully from server</string>
    <string name="hwInfo_androidVersion">Android version:</string>
    <string name="hwInfo_sensors">SENSORS:</string>
    <string name="downloadApk_downloadFailed">Download failed.</string>
    <string name="downloadApk_errorMessage2">Server sent malformed url. We could not download application: %1$s</string>
    <string name="downloadApn_failedLinkRequest">Downloadlink request failed</string>
    <string name="appUpdateAvailable">An update is available for the app \"%1$s\".</string>
    <string name="sensor_all">All</string>
    <string name="sensor_unknown">Unknown sensor</string>
    <string name="sensor_accelerometer">Accelerometer</string>
    <string name="sensor_magnetic_field">Magnetic field sensor</string>
    <string name="sensor_orientation">Orientation sensor</string>
    <string name="sensor_gyroscope">Gyroscope</string>
    <string name="sensor_light">Light sensor</string>
    <string name="sensor_pressure">Pressure sensor</string>
    <string name="sensor_temperature">Temperature sensor</string>
    <string name="sensor_proximity">Proximity sensor</string>
    <string name="sensor_gravity">Gravity sensor</string>
    <string name="sensor_linear_acceleration">Linear acceleration sensor</string>
    <string name="sensor_rotation">Rotation sensor</string>
    <string name="sensor_humidity">Humidity sensor</string>
    <string name="sensor_ambient_temperature">Ambient temperature</string>
    <string name="tab_available">Available</string>
    <string name="tab_running">Running</string>
    <string name="tab_history">History</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_pass">Password</string>
    <string name="login_hint_bad_email">Please enter a valid email address.</string>
    <string name="login_hint_bad_pass">Please enter a password containing at least six characters.</string>
    <string name="checking_credentials">Authenticating&#8230;</string>
    <string name="wrong_credentials">Email and/or password are wrong</string>
    <string name="verifying_credentials">Verifying your login credentials.</string>
    <string name="check_internet">Not able to connect to MoSeS. Check your Internet connection.</string>
    <string name="actionBar_deviceID_text">Device ID</string>
    <string name="deviceID_text">Device ID</string>
    <string name="deviceID_text2">Device ID:</string>
    <string name="deviceID_decr_text">Please enter an ID for your device.</string>
    <string name="deviceID_decr_text2">This ID can be an arbitrary non-empty string and is used to identify your device in our system. Please note that only alphanumeric characters are allowed.</string>
    <string name="deviceID_set_button">Set device ID</string>
    <string name="deviceID_not_entered">No device ID entered.</string>
    <string name="deviceID_change_text">Changing the device ID failed, please select another device ID or proceed if you don\'t want to change the ID anymore.</string>
    <string name="dialog_duplicated_deviceID_title">Device ID is already in use.</string>
    <string name="dialog_duplicated_deviceID_text">Your chosen device ID is already in use by: &#160;</string>
    <string name="dialog_duplicated_deviceID_text2">Please choose update if you want to replace this device by your current.</string>
    <string name="dialog_duplicated_deviceID_update">Update</string>
    <string name="dialog_duplicated_deviceID_cancel">Cancel</string>
    <string name="moses_title">MoSeS</string>
    <string name="version">Version: </string>
    <string name="moses_logo">MoSeS logo</string>
    <string name="tap_to_skip">Tap to skip</string>
    <string name="later">Later</string>
    <string name="dialog_goat">Hello, I am a ninja goat!</string>
    <string name="runningTab_UserStudies">Running User Studies</string>
    <string name="installedApkList_defaultHint">(Tap on a user study for additional information)</string>
    <string name="installedApkList_emptyHint">There are no running user studies on your device.</string>
    <string name="availableApkList_defaultHint">(Tap on a user study for additional information)</string>
    <string name="availableApkList_emptyHint">No user studies are available that match your device.</string>
    <string name="availableTab_UserStudies">Available User Studies</string>
    <string name="availableTab_btnOk">Yes</string>
    <string name="availableTab_noInternetConnection">Cannot display the app information because no internet connection seems to be present</string>
    <string name="historyTab_UserStudies">Participated User Studies</string>
    <string name="historyList_defaultHint">(Tap on a user study for additional information)</string>
    <string name="historyList_emptyHint">There are no past user studies on your device.</string>
    <string name="apklist_hint_pendingrequest">List of APKs not fetched from server.</string>
    <string name="apklist_hint_noconnectivity">Your device appears not to be connected to the internet.</string>
    <string name="text_page_title">User Study Information</string>
    <string name="text_app_name">Name:</string>
    <string name="text_app_start_date">Start Date:</string>
    <string name="text_app_end_date">End Date:</string>
    <string name="text_app_version">Version:</string>
    <string name="text_app_description">User study description: &#160;</string>
    <string name="no_username_password">Please enter your username and password before logging in.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="no_deviceid">No device id entered.</string>
    <string name="welcome_to_moses_title_string">Welcome to MoSeS!</string>
    <string name="welcome_to_moses_string">It offers a lot of applications for scientific purposes. Feel free to look around.</string>
    <string name="unknown_response_from_server">Unknown response from server. Maybe you forgot to login to your HotSpot?</string>
    <string name="settings_title">MoSeS - Settings</string>
    <string name="show_splash">Show splash screen</string>
    <string name="show_notifications_in_statusbar">Show notifications in statusbar</string>
    <string name="title_autologin_pref">Login automatically?</string>
    <string name="summary_autologin_pref">Please tick this checkbox if you want to login to the service on each program start.</string>
    <string name="dialog_title_password_pref">Password</string>
    <string name="summary_password_pref">Please enter your MoSeS password.</string>
    <string name="title_password_pref">Password</string>
    <string name="device_prefs">Device settings</string>
    <string name="pref_device_name">Device name</string>
    <string name="pref_change_id">Change the name of this device.</string>
    <string name="button_update">Update</string>
    <string name="button_start">Start</string>
    <string name="btn_survey">View survey</string>
    <string name="about_header_developers">Developers</string>
    <string name="about_last_developers_text">In the summer of 2013 major improvements in usability, user experience and overall system stability were made to MoSeS platform by:</string>
    <string name="about_founder_developer_with_email_1">Wladimir Schmidt (<a href="mailto:w_schmidt_w@yahoo.com">w_schmidt_w@yahoo.com</a>)</string>
    <string name="about_founder_developer_with_email_2">Zijad Maksuti (<a href="mailto:zijad.maksuti@gmail.com">zijad.maksuti@gmail.com</a>)</string>
    <string name="about_continue_developers_text">The further development of the MoSeS platform was accomplished in 2012 by:</string>
    <string name="about_continue_developer_1">Sandra Christina Amend</string>
    <string name="about_continue_developer_2">Ibrahim Alyahya</string>
    <string name="about_continue_developer_3">Fehmi Belhadj</string>
    <string name="about_continue_developer_4">Florian Schnell</string>
    <string name="about_founder_developers_text">MoSeS platform was founded in 2011 and originally developed by:</string>
    <string name="about_founder_developer_1">Wladimir Schmidt</string>
    <string name="about_founder_developer_2">Zijad Maksuti</string>
    <string name="about_founder_developer_3">Jaco Hofmann</string>
    <string name="about_founder_developer_4">Simon Leisching</string>
    <string name="about_telecooperation_lab_more_info">More info about Telecooperation Lab on the website: <a href="http://www.tk.informatik.tu-darmstadt.de">www.tk.informatik.tu-darmstadt.de</a></string>
    <string name="about_telecooperation_lab_footer">2013 © Telecooperation Lab \nAll rights reserved</string>
</resources>