<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/availableApkListFragment" >
   
   <TextView
        android:id="@+id/availableApkHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/availableTab_UserStudies"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/apklist_emptylistLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
    	android:layout_marginRight="15dp"
       	android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/apklist_emptylistHintMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="500sp"
            android:layout_marginTop="30sp"
            android:text="@string/apklist_hint_noconnectivity" />
        <LinearLayout
            android:id="@+id/emptylistBtnsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:gravity="center" >

            <Button
                android:id="@+id/apklist_emptylistActionBtn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/retry" />
        </LinearLayout>

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/apklist_mainListLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/availableApkHeaderInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/installedApkList_defaultHint"
            android:textSize="12sp" />

        <ListView
            android:id="@id/android:list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:choiceMode="singleChoice" 
            android:divider="#000000"
            android:dividerHeight="0.5dp">
        </ListView>
    </LinearLayout>
    
</LinearLayout>