<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013
  Telecooperation (TK) Lab
  Technische Universität Darmstadt
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeParent"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:background="@android:color/background_light"
    android:gravity="end"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/appInfoHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/text_page_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/appInfoHeadline" >

        <!-- 
        <ImageView
            android:contentDescription="@string/content_description_moses_logo"
            android:id="@+id/appimage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/padding_small"
            android:src="@drawable/ic_launcher" /> -->

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_medium"
            android:text="@string/text_app_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_below="@id/linearLayout1"
        android:background="@android:color/background_light" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp" >

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/padding_extrasmall"
                        android:text="@string/text_app_start_date"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_us_startdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="@dimen/padding_extrasmall"
                        android:layout_marginRight="@dimen/padding_medium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/padding_extrasmall"
                        android:text="@string/text_app_end_date"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_us_enddate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="@dimen/padding_extrasmall" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/padding_extrasmall"
                        android:text="@string/text_app_version"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_us_apkversion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="@dimen/padding_extrasmall"
                        android:layout_marginRight="@dimen/padding_medium" />
                </LinearLayout>

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_small"
                    android:layout_marginTop="@dimen/padding_small"
                    android:text="@string/text_app_description"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:minLines="5" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="0dip"
        android:gravity="center"
        android:background="@android:color/background_light" >

        <Button
            android:id="@+id/startapp"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/button_start" />

        <Button
            android:id="@+id/update"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/button_update" />

        <Button
            android:id="@+id/btn_questionnaire"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/btn_survey" />
    </LinearLayout>

</RelativeLayout>
